# electronics_calc

./: app.py  pyproject.toml
ne555/: app.py  ne555_timings.txt
ohms/: app.py
resistors/: app.py  known_resistors.xlsx  resistors.py  vdiv.py
smd_decoder/: app.py  eia96.py  smd_decoder.py  test_eia96.py  test_smd_decoder.py
util/: st_pint.py
