[project]
name = "electronics-calc"
version = "0.1.0"
description = ""

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.52.2,<2.0.0)",
    "pint (>=0.25.2,<0.26.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
vdiv="resistors.vdiv"
